Added community routes
